tests/compile_fail/ktstr_test_workloads_self_duplicate.stderr
error: `FIO` appears twice in `workloads = [..]` — each workload entry must be distinct. Remove the duplicate or compose the payload once and rely on runtime scheduling to spread it across cgroups.
  --> tests/compile_fail/ktstr_test_workloads_self_duplicate.rs:17:32
   |
17 | #[ktstr_test(workloads = [FIO, FIO])]
   |                                ^^^
